--- a/src/app.html
+++ b/src/app.html
@@ -7,10 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 
-		<!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" /> -->
-
-		<script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
-		<link href='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css' rel='stylesheet' />
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" />
 
 	</head>
 	<body>
