Set min height 570px

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" />
   </head>
-  <body>
+  <body class="min-h-[570px]">
     <div>%sveltekit.body%</div>
   </body>
 </html>
